Fixed white space in bottom background - change background

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -59,7 +59,7 @@ body
     display: flex
     align-items: center
     justify-content: center
-    // background: linear-gradient(72.01deg, #ffe2c9d3 0%, #ffe2c9d3 50.02%, #d9bea9b2 97.4%)
+    background: linear-gradient(72.01deg, #ffe2c9d3 0%, #ffe2c9d3 50.02%, #d9bea9b2 97.4%)
     overflow: hidden
 
 .container
